# vrvv

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml
docs/: index.md
docs/dev/: package-structure.md  parser-plugin-architecture.md  writing-parser-plugins.md
src/vrvv/: __init__.py  logging.py
src/vrvv/cli/: __init__.py  app.py
src/vrvv/cli/commands/: __init__.py  derive.py  evaluate.py  parse.py
src/vrvv/compute/: __init__.py  derive.py  evaluate.py
src/vrvv/core/: __init__.py  numeric.py  quantities.py  symbolic.py
src/vrvv/ingest/: __init__.py  base.py  normalize.py  registry.py
src/vrvv/ingest/cfour/: __init__.py  _textparse.py  normalize.py  parser.py  raw.py
tests/: test_cli.py
tests/fixtures/cfour/: anharm.out  corioliszeta  cubic  didQ  minimal.out
tests/ingest/: __init__.py  test_registry.py
tests/ingest/cfour/: __init__.py  test_normalize.py  test_parser.py  test_textparse.py
