[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vrvv"
dynamic = ["version"]
description = 'Implementation of vibration-rotation Van Vleck perturbation theory'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "Andrew Owen"},
]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.5.1",
    "scipy>=1.18.0",
    "sympy>=1.14.0",
    "typer>=0.27.0",
]

[project.scripts]
vrvv = "vrvv.cli.app:main"

[project.optional-dependencies]
dev = [
    "bpython>=0.26",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]
docs = [
    "zensical>=0.0.51",
]

[project.urls]
Documentation = "https://github.com/andrewwillowen/vrvv#readme"
Issues = "https://github.com/andrewwillowen/vrvv/issues"
Source = "https://github.com/andrewwillowen/vrvv"

[tool.hatch.version]
path = "src/vrvv/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.dev]
python = "3.13"
dependencies = ["vrvv[dev]"]

[tool.hatch.envs.docs]
python = "3.13"
dependencies = ["vrvv[docs]"]
[tool.hatch.envs.docs.scripts]
build = "zensical build --clean"
serve = "zensical serve"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "vrvv[dev]",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/vrvv tests}"

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["ruff"]
format-check = [
  "ruff format --check -diff {args:.}",
]
format-fix = [
  "ruff format {args:.}",
]
lint-check = [
  "ruff check {args:.}",
]
lint-fix = [
  "ruff check --fix {args:.}",
]

[tool.coverage.run]
source_pkgs = ["vrvv", "tests"]
branch = true
parallel = true
omit = [
  "src/vrvv/__about__.py",
]

[tool.coverage.paths]
vrvv = ["src/vrvv", "*/vrvv/src/vrvv"]
tests = ["tests", "*/vrvv/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/zensical.toml",
]
[tool.hatch.build.targets.wheel]
packages = ["src/vrvv"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest-tmp"
